--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dexie": "^3.2.4",
     "element-plus": "^2.4.2",
     "vue": "^3.3.4",
+    "vue-img-cutter": "^3.0.4",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0"
   },
