--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.6.2",
+    "crypto-js": "^4.2.0",
     "dexie": "^4.0.8",
     "element-plus": "^2.4.2",
     "vue": "^3.3.4",
