--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.6.2",
-    "crypto-js": "^4.2.0",
     "dexie": "^4.0.8",
     "element-plus": "^2.4.2",
+    "node-forge": "^1.3.1",
     "vue": "^3.3.4",
     "vue-img-cutter": "^3.0.4",
     "vue-router": "^4.2.5",
