--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "vite build",
+    "build:github": "vite build --base /Mk.IX-Client/",
     "preview": "vite preview"
   },
   "dependencies": {
